--- a/vertica-html/css/styles.css
+++ b/vertica-html/css/styles.css
@@ -4,7 +4,7 @@
 Project:	Vertica - Retina Ready Resume / CV & Portfolio
 Author:	Diego Pereira @ DotRex
 Version:	1.1
-Last change:	08/08/14 
+Last change:	08/08/14
 Primary use:	CV / Resume
 -------------------------------------------------------------------*/
 /*------------------------------------------------------------------
@@ -28,7 +28,7 @@ Primary use:	CV / Resume
 16. Crossbrowser Stuff
 -------------------------------------------------------------------*/
 /* ==========================================================
-! 1. General 
+! 1. General
 ========================================================== */
 .color1 {
   color: #249991;
@@ -53,7 +53,7 @@ Primary use:	CV / Resume
 }
 body {
   font-family: 'Open Sans', sans-serif;
-  background-image: url('../img/background2.jpg');
+  background-image: url('../img/nature4.jpeg');
   background-attachment: fixed;
   background-repeat: repeat-x;
   background-color: #3b658a;
